--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <title>Tracker Web Dashboard</title>
+
+    <!-- Can add SEO / Meta tags -->
+
+    <!-- Normalize CSS in different browsers -->
     <link src="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css"></link>
 
     <!-- Google Web Fonts Robot -->
